# Telegramwasabi

./: Dockerfile  cofing.py  config.py  main (1).py  main (2).py  main.py  pyproject.toml
session/: file_bot.session  file_bot.session-journal
