[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio-throttle>=1.0.2",
    "boto3>=1.40.27",
    "botocore>=1.40.27",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pyrogram>=2.0.106",
    "requests>=2.32.5",
    "tgcrypto>=1.2.5",
]
